# FMD_Qt

./: .gitignore  README.md
ControleDeEstoque/: .gitignore  CMakeLists.txt  ControleDeEstoque_pt_BR.ts  DBConnection.h  FMStockManagement.cpp  FMStockManagement.h  MainForm.cpp  Resources.qrc  fmlogin.cpp  fmlogin.h  fmnewsale.cpp  fmnewsale.h  fmnewsale.ui  fmprincipal.cpp  fmprincipal.h  main.cpp
ControleDeEstoque/db/: StockControl.db
ControleDeEstoque/db/querys/: master
ControleDeEstoque/include/: DBConnection.h  FMEmployeeManagement.h  FMLogin.h  FMPrincipal.h
ControleDeEstoque/src/: FMEmployeeManagement.cpp  FMLogin.cpp  FMNewSale.cpp  FMPrincipal.cpp  main.cpp
ControleDeEstoque/stylesheets/: btnNewSale.css
ControleDeEstoque/ui/: FMEmployeeManagement.ui  FMLogin.ui  FMNewSale.ui  FMPrincipal.ui  FMStockManagement.ui  MainForm.ui
